bpo-36527: silence -Wunused-parameter warnings in object.h (GH-12688)